hotmoka/io-takamaka-examples/src/main/java/io/takamaka/tests/errors/inconsistentthrowsexceptions2/Sub.java
package io.takamaka.tests.errors.inconsistentthrowsexceptions2;

public class Sub extends Super {
	public void m() {}
}